--- a/.github/windows-docker.yml
+++ b/.github/windows-docker.yml
@@ -4,14 +4,14 @@ name: 'Docker Publish (windows)'
 on:
   push:
     branches:
-      - master
+      - main
       - docker-publish-windows
 
 jobs:
   docker-publish-windows:
     # We run on the self hosted windows runner
     name: 'Docker Publish (windows)'
-    runs-on: [self-hosted, windows, x64]
+    runs-on: [windows, x64]
 
     steps:
       # We're demonstrating we've checked the source code out.
