--- a/.github/workflows/windows-docker.yml
+++ b/.github/workflows/windows-docker.yml
@@ -19,13 +19,13 @@ jobs:
         uses: actions/checkout@v2
 
 
-      # We demonstrate we are able to log in into Harbor.
-      # - name : 'Login to Harbor'
-      #   uses: docker/login-action@v1
-      #  with:
-      #    registry: reg.scout24.ch
-      #    username: ${{ secrets.DOCKER_USERNAME }}
-      #    password: ${{ secrets.DOCKER_PASSWORD }}
+      # We demonstrate we are able to log in into registry.
+      - name : 'Login to registry'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # We demonstrate we can build and publish the image to Harbor
       # - name: 'Push to Harbor'
